k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quotebook-service
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
