k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: quotebook-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - quotebook.xyz
      secretName: quotebook-letsencrypt-tls
  rules:
  - host: quotebook.xyz
    http:
      paths:
      - backend:
          serviceName: quotebook-service
          servicePort: 80
        path: /
